# fc14play

./: .gitignore  CMakeLists.txt  LICENSE  README.md  paula.c  paula.h  replayer.c  replayer.h
audiodrivers/: how_to_write_drivers.txt
audiodrivers/sdl/: sdldriver.c
audiodrivers/winmm/: winmm.c
fc14play/: make-linux.sh  make-macos.sh
fc14play/src/: fc14play.c  posix.c  posix.h
fc14play/vs2019_project/: fc14play.sln  fc14play.vcxproj  fc14play.vcxproj.filters
